<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment"
    android:padding="18dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_task"
        android:textSize="16sp"
        android:textFontWeight="700"
        android:textColor="@color/blue_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_tittle_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_desc_task"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tittle_task"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_time_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tittle_time"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_desc_task"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_date_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_time_task"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:backgroundTint="@color/blue_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_date_task"
        android:layout_marginTop="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>