<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/time_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textFontWeight="700"
        android:textSize="12sp"
        android:textColor="@color/font_color_task_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="18dp"/>

    <View
        android:layout_width="6dp"
        android:layout_height="1dp"
        android:background="#EDF0F7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_task"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="35dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_task"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/time_task"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="57dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tittle_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle_task"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/nav_task_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_icon"
                app:layout_constraintStart_toEndOf="@id/tittle_task"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/time_task_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_task_detail"
                android:textSize="10sp"
                android:textFontWeight="300"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tittle_task"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cv_task"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/check_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_24"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"/>

            <TextView
                android:id="@+id/complete_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:textSize="10sp"
                android:textFontWeight="400"
                android:layout_marginTop="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="7dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>